...
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.WhiteHighlights"
        tools:context="ru.codingworkshop.gymm.ui.actual.rest.ActualTrainingRestFragment">

        <TextView
            android:id="@+id/restTimeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{currentTime}"
            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
            android:textColor="?android:attr/textColorPrimaryInverse"
            android:textSize="72sp"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_pause_white_24dp"/>

        <ImageButton
            android:id="@+id/restStopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:visibility="@{state == State.FINISHED ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toTopOf="@+id/restPauseResumeActionButton"
...
