...
                android:hint="@string/weight"
                android:inputType="numberDecimal"
                android:text="@={actualSet.weight}" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/actualSetDoneButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
...
