<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="exercise"
            type="ru.codingworkshop.gymm.data.entity.Exercise" />

        <variable
            name="inActionMode"
            type="android.databinding.ObservableBoolean" />

        <import type="android.view.View" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/programExerciseToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="?attr/homeAsUpIndicator" />

            <TextView
                android:id="@+id/programExerciseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:drawableEnd="@{@drawable/ic_touch_app_white_24dp}"
                android:drawableRight="@{@drawable/ic_touch_app_white_24dp}"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:text="@{exercise.name ?? @string/program_exercise_activity_exercise_empty_text}"
                android:visibility="@{inActionMode ? View.GONE : View.VISIBLE}"
                tools:text="Very very long exercise name yeah babe" />

        </android.support.design.widget.AppBarLayout>

        <TextView
            android:id="@+id/programExerciseBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:drawableTop="@{@drawable/ic_timeline_200dp}"
            android:text="@string/program_exercise_activity_empty_list"
            app:layout_anchor="@+id/programSetList"
            app:layout_anchorGravity="center" />

        <ru.codingworkshop.gymm.ui.program.common.ProgramRecyclerView
            android:id="@+id/programSetList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/programExerciseAddSetButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="bottom|end"
            android:visibility="@{inActionMode ? View.GONE : View.VISIBLE}"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_add_24dp" />
    </android.support.design.widget.CoordinatorLayout>
</layout>