...
    <!-- layout items -->
    <string name="program_exercise_activity_rest_time_minutes_label">Минуты</string>
    <string name="program_exercise_activity_rest_time_seconds_label">Секунды</string>
    <string name="program_exercise_activity_empty_list">Вы ещё не добавили подходы</string>
    <string name="program_exercise_activity_rest_time_not_set">не задано</string>
    <string name="program_exercise_activity_set_deleted_message">Подход удалён</string>
    <string name="program_exercise_activity_exercise_empty_text">Выберите упражнение</string>
    <!-- error dialog -->
    <string name="program_exercise_activity_empty_list_dialog_message">Добавьте хотя бы один подход</string>
    <string name="program_exercise_activity_exercise_not_selected_message">Выберите упражнение</string>
    <!-- exercise's reps and rest time input dialog -->
    <string name="program_exercise_activity_dialog_title">Добавление подхода</string>
    <string name="program_exercise_activity_dialog_title_edit">Изменение подхода</string>
    <string name="program_exercise_activity_dialog_rest_time_label">Время на отдых</string>

...
