<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionSaveExercise"
        android:title="@string/program_training_activity_menu_done"
        android:icon="@drawable/ic_done_white_24dp"
        app:showAsAction="always" />
</menu>